--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "parse-diff": "^0.7.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.3.0",
     "dotenv": "^8.2.0",
     "emoji-name-map": "^1.2.8",
     "github-username-regex": "^1.0.0",
